[package]
# Versioning
name = "sammy"
version = "0.2.0"
authors = ["Sheldon Young <sheldon@jmsltd.ca>"]
description = "Samsara fleet management utilities"
license = "NONE"

# Prevent accidentally publshing to crates.io
publish = false

edition = "2021"

[dependencies]
chrono = "0.4.19"
config = { version = "0.13.1", features = ["toml"] }
clap = { version = "3.2", default-features = false, features = ["std", "cargo", "color", "env", "suggestions"] }
log = "0.4.17"
simplelog = "0.12.0"
hyper = { version = "0.14.19", features = ["client", "http1", "http2", "runtime", "stream"] }
hyper-tls = "0.5.0"
samsara = { path = "../samsara" }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-serde_json-1"] }

# TODO: Pick and choose features
tokio = { version = "1.18.2", features = ["full"] }
